[gd_scene load_steps=3 format=3 uid="uid://bfbakcgwipkrt"]

[ext_resource type="Script" uid="uid://b6fp0rm3ns4y0" path="res://locations/template/battle/action_btn.gd" id="1_a1mhq"]
[ext_resource type="Theme" uid="uid://dij1y8wlt3r37" path="res://themes/main_theme.tres" id="1_gyfmx"]

[node name="ActionBtn" type="Button"]
custom_minimum_size = Vector2(10, 10)
focus_mode = 0
theme = ExtResource("1_gyfmx")
script = ExtResource("1_a1mhq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
